[package]
name    = "rust_hero"
version = "0.0.1"
edition = "2018"
authors = ["igorfs10 <igorfs10@gmail.com>"]
repository = "https://github.com/igorfs10/rust_hero"
license = "gpl-v3"

[dependencies]
console = "^0.11.3"
rand = "^0.7.3"
fltk = { version = "^0.8", features = ["fltk-bundled"] }
chrono = "^0.4"