[package]
name    = "rust_hero"
version = "0.0.1"
edition = "2018"
authors = ["igorfs10 <igorfs10@gmail.com>"]
repository = "https://github.com/igorfs10/rust_hero"
license = "gpl-v3"

[dependencies]
console = "^0.12.0"
rand = "^0.7.3"
chrono = "^0.4.19"
orbtk = "0.3.1-alpha3"

[profile.release]
lto = true

[profile.release.build-override]
opt-level = 3