[package]
name    = "rust_hero"
version = "0.0.1"
edition = "2018"
authors = ["igorfs10 <igorfs10@gmail.com>"]
repository = "https://github.com/igorfs10/rust_hero"
license = "gpl-v3"

[dependencies]
console = "^0.12"
rand = "^0.7"
chrono = "^0.4"
fltk = { version = "^0.9.7", features = ["fltk-bundled"] }

[profile.release]
lto = true

[profile.release.build-override]
opt-level = 3
