[package]
name    = "rust_hero_dados"
version = "0.0.1"
edition = "2018"
authors = ["igorfs10 <igorfs10@gmail.com>"]
repository = "https://github.com/igorfs10/rust_hero"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
rand = "0.8.3"
rand_pcg = "0.3.0"

# [lib]
# crate-type = ["cdylib", "rlib"]
