[package]
name    = "rust_hero_dados"
version = "0.0.1"
edition = "2018"
authors = ["igorfs10 <igorfs10@gmail.com>"]
repository = "https://github.com/igorfs10/rust_hero"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
rand = "0.8.3"
rand_pcg = "0.3.0"
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.2"
