[package]
name    = "rust_hero_gui"
version = "0.0.1"
edition = "2018"
authors = ["igorfs10 <igorfs10@gmail.com>"]
repository = "https://github.com/igorfs10/rust_hero"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
fltk = { version = "0.16.4", features = ["fltk-bundled"] }
rust_hero_dados = { path = "../rust_hero_dados" }
