[package]
name    = "rust_hero_ui"
version = "0.0.1"
edition = "2018"
authors = ["igorfs10 <igorfs10@gmail.com>"]
repository = "https://github.com/igorfs10/rust_hero"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
console = "0.13.0"
rand = "0.7.3"
chrono = "0.4.19"
fltk = { version = "0.10.3", features = ["fltk-bundled"] }
rust_hero_dados = { path = "../rust_hero_dados" }
